# pokespeare

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
pokespeare/: __init__.py  pokeapi.py  shakespeare.py  wsgi.py
pokespeare/views/: __init__.py  pokemon.py
tests/: __init__.py  conftest.py  test_pokeapi.py  test_shakespeare.py  test_wsgi.py
tests/jsons/: pokemon_specie_squirtle.json
tests/test_views/: test_pokemon.py
